--- a/package.json
+++ b/package.json
@@ -13,5 +13,7 @@
     "express": "^4.16.4",
     "multer": "^1.4.1"
   },
-  "repository": {"type": "git", "url":""}
+  "repository": {
+    "type": "git",
+    "url":"https://github.com/C-Hg/fcc-file-metadata"}
 }
